--- a/events/sidebar/examples/index.html
+++ b/events/sidebar/examples/index.html
@@ -54,7 +54,7 @@
     </a>
 
       <nav class="nav_01">
-        <a href="/index.html">Harzard Atlas</a>
+        <a href="https://github.mit.edu/pages/6894-sp20/FP-Hazard-Atlas/">Harzard Atlas</a>
         <a href="index.html">Community</a>
         <a href="/landing-page/index.html">About</a>
          </nav>
