--- a/events/sidebar/examples/index.html
+++ b/events/sidebar/examples/index.html
@@ -50,7 +50,7 @@
   
   <div class="nav_00">
   
-    <a href="/Landing">Hazard Atlas
+    <a href="https://github.mit.edu/pages/6894-sp20/FP-Hazard-Atlas/">Hazard Atlas
     </a>
 
       <nav class="nav_01">
