--- a/events/sidebar/examples/index.html
+++ b/events/sidebar/examples/index.html
@@ -50,13 +50,13 @@
   
   <div class="nav_00">
   
-    <a href="https://github.mit.edu/pages/6894-sp20/FP-Hazard-Atlas/">Hazard Atlas
+    <a href="https://github.mit.edu/pages/6894-sp20/FP-Hazard-Atlas/landing-page/index.html">Hazard Atlas
     </a>
 
       <nav class="nav_01">
         <a href="https://github.mit.edu/pages/6894-sp20/FP-Hazard-Atlas/">Harzard Atlas</a>
         <a href="index.html">Community</a>
-        <a href="/landing-page/index.html">About</a>
+        <a href="https://github.mit.edu/pages/6894-sp20/FP-Hazard-Atlas/landing-page/index.html">About</a>
          </nav>
 
         </div>
