--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -78,7 +78,7 @@
 
             <p>Litao Yan, Kaihong Gao, Ziyuan Zhu</p>
             <p>The pandemic witnesses the tight connection of the world, we gradually realize that no matter the virus or other disasters such as earthquakes or hurricanes, we could never keep us out of the affair.</p>
-            <a href="/index.html" class="btn btn-custom btn-lg page-scroll">Explore Atlas</a> </div>
+            <a href="https://github.mit.edu/pages/6894-sp20/FP-Hazard-Atlas/index.html" class="btn btn-custom btn-lg page-scroll">Explore Atlas</a> </div>
         </div>
       </div>
     </div>
